[gd_scene load_steps=4 format=3 uid="uid://1vmwbqdssvhd"]

[ext_resource type="Theme" uid="uid://dws6dqiic6wt" path="res://resources/default.tres" id="1_tt0ao"]
[ext_resource type="Script" uid="uid://cgyrqueibhcxy" path="res://tool/attribute_prompt.gd" id="2_tt0ao"]
[ext_resource type="Texture2D" uid="uid://clvwdolwxpfkg" path="res://resources/icons/white/time-window.png" id="3_f2eeg"]

[node name="AttributePrompt" type="PanelContainer"]
offset_right = 217.0
offset_bottom = 58.0
theme = ExtResource("1_tt0ao")
theme_type_variation = &"CanvasPrompt"
script = ExtResource("2_tt0ao")
metadata/_custom_type_script = "uid://ck4fq6cbpmv40"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
texture = ExtResource("3_f2eeg")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Attribute"

[node name="ValueField" type="LineEdit" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[connection signal="text_submitted" from="MarginContainer/HBoxContainer/ValueField" to="." method="_on_value_field_text_submitted"]
